fixed the cintact form from overlapping text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -273,6 +273,10 @@ section {
     text-decoration: none;
   } */
 
+  #location {
+    color: black;
+  }
+
 
   #type {
     color: black;
